fix: Fix alignment of buttons in build form

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -177,6 +177,7 @@ $color-social-icon-foreground: $color-light;
 @include vf-p-icon-models;
 @include vf-p-icon-edit;
 @include vf-p-icon-units;
+@include vf-p-icon-restart;
 
 dl {
   margin-bottom: $spv--x-large;
